--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,24 +4,14 @@ FROM ubuntu:14.04
 RUN apt-get update -y
 RUN apt-get install -y python-pip python-dev
 
-ENV CELERY_BROKER_URL amqp://rabbit1 
-ENV CELERY_RESULT_BACKEND amqp://rabbit1 
-ENV C_FORCE_ROOT true
-
-ENV HOST 0.0.0.0
-ENV PORT 5000
-ENV DEBUG true
-
 COPY . /app
 WORKDIR /app
 
 # install requirements
 RUN pip install -r requirements.txt
 
-# expose the app port
-EXPOSE 5000
-
-# run the app server
-ENTRYPOINT ["python"]
-CMD ["app.py"]
+ENV FLASK_HOST 0.0.0.0
+ENV FLASK_PORT 5000
+ENV FLASK_DEBUG true
+ENV REDIS_URL redis://redis1:6379/0
 
