nginx & uwsgi in front of backend web app for web container.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,7 +2,20 @@ FROM ubuntu:14.04
 
 
 RUN apt-get update -y
-RUN apt-get install -y python-pip python-dev
+RUN apt-get install -y supervisor nginx python-pip python-dev
+
+RUN ln -sf /dev/stdout /var/log/nginx/access.log \
+	&& ln -sf /dev/stderr /var/log/nginx/error.log
+EXPOSE 80 443
+# Finished setting up Nginx
+
+RUN echo "daemon off;" >> /etc/nginx/nginx.conf
+
+COPY nginx.conf /etc/nginx/conf.d/
+
+COPY uwsgi.ini /etc/uwsgi/
+
+COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 COPY . /app
 WORKDIR /app
@@ -10,8 +23,5 @@ WORKDIR /app
 # install requirements
 RUN pip install -r requirements.txt
 
-ENV FLASK_HOST 0.0.0.0
-ENV FLASK_PORT 5000
-ENV FLASK_DEBUG true
 ENV REDIS_URL redis://redis1:6379/0
 
