--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,12 @@ services:
     build:
       context: ./app
       dockerfile: Dockerfile
-    command: python app.py 
+    command: /usr/bin/supervisord 
     image: flaskrq
     restart: always
     ports:
-     - "5000:5000"
+     - "80:80"
+     - "443:443"
     depends_on:
       - redis
     links:
