--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -1,10 +1,21 @@
 server {
     listen       80;
-    server_name  localhost;
+    server_name  traveltime-jobservice.integrated.pro;
 
-    location / { try_files $uri @app; }
+    location / {
+      if ($request_method = OPTIONS ) {
+        add_header Access-Control-Allow-Origin "*";
+        add_header Access-Control-Allow-Methods "POST, GET, OPTIONS";
+        add_header Access-Control-Allow-Headers "Content-Type";
+        add_header Access-Control-Allow-Credentials "true";
+        add_header Content-Length 0;
+        add_header Content-Type text/plain;
+        return 200;
+      } 
+      add_header Access-Control-Allow-Headers "Content-Type";
+      try_files $uri @app; }
     location @app {
-        include uwsgi_params;
-	uwsgi_pass unix:/app/uwsgi.sock;
+      include uwsgi_params;
+      uwsgi_pass unix:/app/uwsgi.sock;
     }
 }
